--- a/style.css
+++ b/style.css
@@ -79,14 +79,12 @@ left: 30%;
     font-size: 25px;
     cursor: pointer;
     color: black;
-    /* background-color: black;  */
   
 }
 .frame{
     width: 600px;
     height: 400px;
     overflow: hidden; 
-    /* border: 1px solid black;  */
 }
 .slider{
     display: flex;
@@ -94,7 +92,6 @@ left: 30%;
     transition: all 1s ease;
   gap: 40%;
   margin-left: 15%;
-  /* border: 1px solid red; */
 }
 .slide p{
     font-size: 90%;
@@ -131,20 +128,12 @@ margin-top: 1%;
     display: flex;
     margin-left: 0%;
     margin-right: 5%;
-    /* margin-bottom: 0%; */
-    /* border: 1px solid greenyellow; */
-    /* width: 100%; */
     width: 100%;
     gap: 5%;
 }
 .finding_myself{
-    /* border: 1px solid red; */
     width: 100%;
     margin-top: 6%;
-    /* align-content: center; */
-   
-    
-    /* margin-left: 10%; */
 }
 .finding_myself img{
 height:90% ;
@@ -153,7 +142,6 @@ margin-left: 29%;
 margin-top: 10%;
 }
 .title_justification{
-    /* border: 1px solid black; */
     padding: 3%;
     height: 400px;
     width: 150%;
@@ -177,7 +165,6 @@ margin-top: 10%;
     
 }
 .question{
-    /* border: 1px solid black; */
     width: 50%;
     margin: auto;
     margin-top: 4%;
@@ -251,7 +238,6 @@ margin-top: 10%;
 }
 .buttons{
     display: grid;
-    /* border: 1px solid red; */
     margin-top: 2.5%;
 }
 @media only screen and (max-width:500px){
@@ -262,18 +248,16 @@ margin-top: 10%;
     nav{
         font-size: 62%;
         margin-left: 0%;
-        /* border: 1px solid red; */
     }
 .born_crime{
     display: grid;
 width: 98%;
 height: 70vh;
 margin-left: -6%;
-/* border: 1px solid purple; */
+
 
 }
 .quotes{
-    /* border: 1px solid black; */
     width: 88%;
     margin-left: 7%;
 
@@ -285,30 +269,18 @@ margin-left: -6%;
 
 }
 .top{
-/* border: 1px solid blue; */
 width: 85%;
 margin-left: 5%;
 margin-top: -10%;
 border-bottom: none;
-
 }
-.fa-quote-left{
 
-}
-.container{
-
-}
-.arrow{
-
-}
 .frame{
-/* border: 1px solid black; */
 width: 350px;
 margin-left: -9%;
 }
 .slider{
 width:450vw ;
-    /* border: 1px solid red; */
 margin-top: 10%;
 gap: 29%;
 margin-left: -55%;
@@ -319,7 +291,6 @@ margin-left: -55%;
 }
 .slide{
 width: 300vw;
-/* border: 1px solid black; */
 margin-left: 10%;
 padding-top: 7%;
 
@@ -327,7 +298,6 @@ padding-top: 7%;
 .book_cover{
 width: 60%;
 height: 40%;
-/* border: 1px solid red; */
 position: absolute;
 top: 35%;
 margin-left: 18%;
@@ -342,13 +312,11 @@ border: none;
 .title_container{
 flex-direction: column-reverse;
 width: 90%;
-/* border: 1px solid black; */
 height: 1100px;
 padding-left:3% ;
 margin-top: -70%;
 }
 .finding_myself{
-/* border: 1px solid black; */
 margin-top: 25vh;
 }
 .finding_myself img{
@@ -364,7 +332,6 @@ margin-right: 0%;
 margin-left: 0%;
 width: 85%;
 margin-right: 0%;
-/* border: 1px solid black; */
 border: none;
 margin-top: 10%;
 }
@@ -406,7 +373,6 @@ h2{
 @media only screen and (min-width:300px) and (max-width:400px){
 
   .book_cover{
-     /* border: 1px solid black; */
     margin-top: 9%;
     height: 40%;
     padding-left: 15%;
@@ -416,7 +382,6 @@ h2{
     width: 50%;
   } 
   .finding_myself{
-    /* border: 1px solid black; */
     margin-top: 95vw;
   } 
 }
@@ -424,9 +389,79 @@ h2{
 top: 16%;
 }
 }
-@media only screen and ( min-width:768px) and (max-width:1180){
+@media only screen and ( min-width:768px) and (max-width:1180px){
     .born_crime{
-        border: 1px solid black;
+        width: 100%;
+        margin-left: 0%;  
     }
+    .book_cover{
+        width: 100%;
+        height: 50%;
+        margin-top: 12%;
+        padding-right: 4%;
+margin-left: -10%;
+    }
+    .book_cover img{
+        height: 100%;
+        width: 100%;
+    }
+    .quotes img{
+        position: absolute;
+        top: 13%;
+        height: 10%;
+
+    }
+    .quotes{
+        top: 5%;
+    }
+    .top{
+width: 80%;
+
+    }
+
+    .title_justification{
+        height: 60vh;
+        margin-left: -5%;
+        
+    }
+    .finding_myself{
+        width: 100vw;
+        margin-top: 15%;
+        margin-left: 2%;
+    }
+    .finding_myself img{
+        margin-left: 0%;
+width: 35vw;
+height: 60%;
+
+    }
+    .reflection{
+        width: 89%;
+    }
+    .caged{
+height: 10%;
+width: 13%;
+    }
+    .woman_cage{
+height: 10%;
+left: 82%;
+width: 13%;
+    }
+    
+}
+
+
+@media only screen and (min-width:600px) and (max_width:1024px){
+   
+  .frame{
+    border: 1px solid red;
+  }
+  .title_container{
+    border: 1px solid red;
+    width: 50%;
+  }
+  .born_crime{
+    border: 1px solid red;
+  }
     
 }
